# Zodiac

./: ._workspace.py  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  LENS.md  MILO.md  README.md  components.json  electron-build.json  electron-builder.json  electron-builder.json5  esbuild.config.js  gulpfile.js  index.html  installer.iss  package-lock.json  package.json  tree.txt  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
electron/: electron-env.d.ts  main.ts  preload.ts
electron/ipc/: chat-ipc.ts  explorer-ipc.ts  files-ipc.ts  shell-ipc.ts  storage-ipc.ts  terminal-ipc.ts  watcher-ipc.ts  workspace-ipc.ts
electron/main-services/: explorer-service.ts  storage-service.ts  terminal-service.ts  workspace-service.ts
electron/server/: lsp.server.ts
electron/services/: explorer-service.ts  storage-service.ts  workspace-service.ts
electron/shared/: emitter.ts  terminal.helpers.ts  watcher.helpers.ts
extensions/bash/: main.ts
extensions/javascript/: main.ts
extensions/python/: main.ts
extensions/rust/: main.ts
extensions/typescript/: main.ts
react-src/: App.tsx  index.css  main.tsx  vite-env.d.ts
react-src/components/: ActivitybarPanelComponent.tsx  ProblemsComponenet.tsx  TabsComponent.tsx  TerminalComponenet.tsx  Titlebar.tsx
react-src/editor/: EditorArea.tsx
scripts/: installer.iss
shared/: explorer.types.ts  storage-keys.ts  workspace.types.ts
src/: App.tsx  index.css  main.ts  main.tsx  server.ts  style.css  tsconfig.json
src/code/base/native/rust/crates/meridia/: Cargo.toml
(+667 files in other folders)
