[package]
name = "native-rust"
version = "0.1.0"
license = "ISC"
edition = "2021" 
exclude = ["rust.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
